--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1><u>Popular Fast Food Restaurants</u></h1>
-    <div class="block">
-        <h2>McDonalds</h2>
-        <img src="https://s7d1.scene7.com/is/image/mcdonalds/crown_point_mcdonalds-RR-EDIT_001:hero-desktop?resmode=sharp2" alt="McDonalds">
-        <p>McDonalds is one of the most popular chains in the world with more than 40,000 locations.</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Blogpost</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1><u>Blog: Popular Fast Food Restaurants</u></h1>
+    <div class="restaurant1">
+      <h2>McDonalds</h2>
+      <img
+        src="https://s7d1.scene7.com/is/image/mcdonalds/crown_point_mcdonalds-RR-EDIT_001:hero-desktop?resmode=sharp2"
+        alt="McDonalds"
+      />
+      <p>
+        McDonalds is one of the most popular chains in the world with more than
+        40,000 locations.
+      </p>
     </div>
-    <div class="block">
-        <h2>Wendy's</h2>
-        <img src="https://res.cloudinary.com/ybmedia/image/upload/c_crop,h_985,w_1754,x_0,y_123/c_fill,f_auto,h_1215,q_auto,w_2160/v1/m/1/9/19b980c5854431e5d57448f87aee658549a3b45e/23-things-know-wendys.jpg" alt="Wendy">
-        <p>Wendy's is known for its diverse selection of food from chili to burgers to potatoes. One of the best and most popular restaurants across the world.</p>
+    <div class="restaurant2">
+      <h2>Wendy's</h2>
+      <img
+        src="https://res.cloudinary.com/ybmedia/image/upload/c_crop,h_985,w_1754,x_0,y_123/c_fill,f_auto,h_1215,q_auto,w_2160/v1/m/1/9/19b980c5854431e5d57448f87aee658549a3b45e/23-things-know-wendys.jpg"
+        alt="Wendy"
+      />
+      <p>
+        Wendy's is known for its diverse selection of food from chili to burgers
+        to potatoes. One of the best and most popular restaurants across the
+        world.
+      </p>
     </div>
-    <div class="block">
-        <h2>Popeyes</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Popeyes_Louisiana_Kitchen_%2851195358373%29.jpg" alt="Popeyes">
-        <p>Popeyes sells good fried chicken that is eaten across America.</p>
+    <div class="restaurant3">
+      <h2>Popeyes</h2>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/6/66/Popeyes_Louisiana_Kitchen_%2851195358373%29.jpg"
+        alt="Popeyes"
+      />
+      <p>Popeyes sells good fried chicken that is eaten across America. They also sell other items like Signature Sides which are biscuits. Freshly baked buttermilk biscuits, flaky on the outside and soft on the inside - a perfect pairing and coleslaw.</p>
     </div>
-</body>
+  </body>
 </html>
