--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blogpost</title>
+    <title>Gas Release Menu</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1><u>Blog: Popular Fast Food Restaurants</u></h1>
-    <div class="restaurant1">
+    <div id="res1" class="restaurant1">
       <h2>McDonalds</h2>
       <img
         src="https://s7d1.scene7.com/is/image/mcdonalds/crown_point_mcdonalds-RR-EDIT_001:hero-desktop?resmode=sharp2"
@@ -15,10 +18,10 @@
       />
       <p>
         McDonalds is one of the most popular chains in the world with more than
-        40,000 locations.
+        40,000 locations. Please visit <a href="https://www.mcdonalds.com/us/en-us.html">McDonalds</a>!
       </p>
     </div>
-    <div class="restaurant2">
+    <div id="res2" class="restaurant2">
       <h2>Wendy's</h2>
       <img
         src="https://res.cloudinary.com/ybmedia/image/upload/c_crop,h_985,w_1754,x_0,y_123/c_fill,f_auto,h_1215,q_auto,w_2160/v1/m/1/9/19b980c5854431e5d57448f87aee658549a3b45e/23-things-know-wendys.jpg"
@@ -30,13 +33,18 @@
         world.
       </p>
     </div>
-    <div class="restaurant3">
+    <div id="res3" class="restaurant3">
       <h2>Popeyes</h2>
       <img
         src="https://upload.wikimedia.org/wikipedia/commons/6/66/Popeyes_Louisiana_Kitchen_%2851195358373%29.jpg"
         alt="Popeyes"
       />
-      <p>Popeyes sells good fried chicken that is eaten across America. They also sell other items like Signature Sides which are biscuits. Freshly baked buttermilk biscuits, flaky on the outside and soft on the inside - a perfect pairing and coleslaw.</p>
+      <p>
+        Popeyes sells good fried chicken that is eaten across America. They also
+        sell other items like Signature Sides which are biscuits. Freshly baked
+        buttermilk biscuits, flaky on the outside and soft on the inside - a
+        perfect pairing and coleslaw.
+      </p>
     </div>
   </body>
 </html>
