--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>
         Wendy's is known for its diverse selection of food from chili to burgers
         to potatoes. One of the best and most popular restaurants across the
-        world.
+        world. To visit: <a href="https://www.wendys.com/">Wendy's</a>.
       </p>
     </div>
     <div id="res3" class="restaurant3">
@@ -43,7 +43,7 @@
         Popeyes sells good fried chicken that is eaten across America. They also
         sell other items like Signature Sides which are biscuits. Freshly baked
         buttermilk biscuits, flaky on the outside and soft on the inside - a
-        perfect pairing and coleslaw.
+        perfect pairing and coleslaw. Please visit <a href="https://www.popeyes.com/">Popeyes</a>!
       </p>
     </div>
   </body>
